started from new sheet

--- a/src/Assets/variables.styl
+++ b/src/Assets/variables.styl
@@ -2,10 +2,12 @@ $font-size-default = 16px
 $font-size-min = 15px
 
 $color-red = #dc3545
-$color-green = #3EBB3B
+$color-green = #28a745
+$color-white-gray = #f8f9fa
 $color-white = #ffffff
+$color-black = #000000
 
-$color-primary-bg = #CEE6F2
+$color-primary-bg = #dae0e5
 $color-primary-action = #0090DB
 $color-primary-text = #73AECC
 
@@ -27,8 +29,6 @@ $colot-text-content-hints = #93A2AA
 
 $default-box-border-radius = 2px
 $default-box-padding = 1.2rem 0.8rem
-//$color-primary-bg2 = #BEC2C4
-//$color-primary-bg3 = #3EBB3B
 
 /** z-index */
 $overlay-button-close-zi = 999
