before react-router

--- a/src/Components/Button/Button.styl
+++ b/src/Components/Button/Button.styl
@@ -8,7 +8,8 @@
   font normal 18px/18px Georgia, sans-serif
   transition color 0.2s ease-in-out, background-color 0.2s ease-in-out, border-color 0.2s ease-in-out
   border-radius 5px
-  outline none
+  &:focus
+    outline none
   &.theme
     &__default
       background-color $color-white-gray
