before adde react router

--- a/src/Components/Button/Button.styl
+++ b/src/Components/Button/Button.styl
@@ -19,14 +19,14 @@
         color $color-black
 
     &__red
-      border 1px solid $color-red
+      border 1px solid $color-primary-bg
       color $color-red
       &:hover
         color $color-white
         background-color $color-red
 
     &__green
-      border 1px solid $color-green
+      border 1px solid $color-primary-bg
       color $color-green
       &:hover
         color $color-white
