--- a/src/Components/Layout/Layout.styl
+++ b/src/Components/Layout/Layout.styl
@@ -8,6 +8,7 @@
   display flex
   width 100%
   margin-bottom 20px
+  z-index 999
 
 .layout-header > span
   font normal 20px/18px Georgia, sans-serif
@@ -23,5 +24,39 @@
   border-bottom 2px solid $color-primary-bg
   border-left 2px solid $color-primary-bg
 
+.layout-header-error
+  display flex
+  position relative
+  justify-content center
+  top -10px
+  z-index 9
+
+.layout-header-error > span
+  color $color-red
+  border 2px solid $color-red
+  padding 5px 20px
+  border-left none
+  border-right none
+  cursor default
+
 .layout-body
   display inline-block
+
+.layout-loader
+  display flex
+  width 100%
+  height 100%
+  justify-content center
+  align-items center
+  position fixed
+  z-index 9999
+  background rgba(238, 243, 240, 0.6)
+  border-radius 5px
+  box-shadow 0 2px 8px rgba(0, 0, 0, 0.7)
+  cursor wait
+
+.layout-loader > span
+  font-weight bold
+  font-family sans-serif
+  font-size 18px
+  color #044b8a
