edit function LoginForm

--- a/src/Components/Button/Button.styl
+++ b/src/Components/Button/Button.styl
@@ -32,6 +32,12 @@
         color $color-white
         background-color $color-green
 
+.disabled
+  opacity 0.4
+  color $color-primary-bg !important
+  &:hover
+    background-color $color-white !important
+
   &.extra
     &_mr-10
       margin 10px
