before error handle

--- a/src/Modules/MainPage/MainPage.styl
+++ b/src/Modules/MainPage/MainPage.styl
@@ -1,4 +1,10 @@
 .main-page-container
   display flex
-  
-// .table-container
+  flex-direction column
+  align-items center
+
+.table-container
+  display flex
+
+.add-test-button
+  display flex
