--- a/src/Components/Table/Table.styl
+++ b/src/Components/Table/Table.styl
@@ -1,6 +1,7 @@
 @import '../../Assets/variables.styl';
 
 .table-container
+  display flex
   margin 10px
   border 1px solid black
 
@@ -16,4 +17,7 @@
 
 .table-container tr
   &:nth-child(odd)
-    background-color: #f2f2f2
+    background-color #f2f2f2
+
+.table-container-header
+  text-align center
