before select added

--- a/src/Components/Table/Table.styl
+++ b/src/Components/Table/Table.styl
@@ -3,11 +3,11 @@
 .table-container
   display flex
   margin 10px
-  border 1px solid black
+  border 1px solid $color-primary-bg
 
 .table-container th
   padding 6px 10px
-  background-color $color-dividing-line
+  background-color $color-primary-bg
 
 .table-container td
   padding 6px 10px
