--- a/src/Assets/variables.styl
+++ b/src/Assets/variables.styl
@@ -4,6 +4,7 @@ $font-size-min = 15px
 $color-red = #dc3545
 $color-green = #28a745
 $color-white-gray = #f8f9fa
+$color-white-gray-gray = #f2f2f2
 $color-white = #ffffff
 $color-black = #000000
 $color-dividing-line = #e9eeef
@@ -20,7 +21,7 @@ $color-error-text = #D5AFAA
 $color-error-action = #F6B5AC
 $color-error-action-text = #FC2B32
 
-
+// #f2f2f2
 $color-text-hints = #829199
 $color-text-default = #2B2B2B
 $color-textLabel-default = #525f67
