--- a/src/Modules/CreateQuestion/CreateQuestion.styl
+++ b/src/Modules/CreateQuestion/CreateQuestion.styl
@@ -1,5 +1,14 @@
+@import '../../Assets/variables.styl';
+
 .create-question-container
-  display flex
+  // display flex
   width 350px
   height 250px
   border: 1px solid black
+
+.create-question-container > span
+  display block
+  text-align center
+  font: normal 16px/18px Georgia, sans-serif;
+  padding: 5px 0;
+  color: $color-text-default;
