--- a/src/Components/Checkbox/Checkbox.styl
+++ b/src/Components/Checkbox/Checkbox.styl
@@ -11,7 +11,7 @@
   -moz-user-select none
   -ms-user-select none
   user-select none
-  margin 10px 0
+  margin 10px 10px
 
 .container input
   position absolute
@@ -24,8 +24,8 @@
   position absolute
   top -2px
   left 0
-  height 25px
-  width 25px
+  height 18px
+  width 18px
   background-color $color-white-gray
   border-radius 5px
   border 1px solid $color-primary-bg
@@ -33,8 +33,8 @@
 .container:hover input ~ .checkmark
   background-color $color-white-gray
 
-.container input:checked ~ .checkmark
-  background-color $color-green
+// .container input:checked ~ .checkmark
+//   background-color $color-green
 
 .checkmark:after
   content ""
@@ -45,11 +45,11 @@
   display block
 
 .container .checkmark:after
-  left 9px
-  top 5px
-  width 5px
-  height 10px
-  border solid $color-white
+  left 6px
+  top 2px
+  width 4px
+  height 9px
+  border solid $color-green
   border-width 0 3px 3px 0
   -webkit-transform rotate(45deg)
   -ms-transform rotate(45deg)
