--- a/src/Components/Input/Input.styl
+++ b/src/Components/Input/Input.styl
@@ -2,13 +2,11 @@
 
 .input-container
   position relative
-  width 100%
 
 .input-container input
   font normal 18px/20px Georgia, sans-serif
-  width 100%
-  margin 5px 0
-  padding 8px 10px
+  margin: 5px 10px;
+  padding: 5px 10px;
   border-radius 5px
   background-color transparent
   border 1px solid $color-primary-bg
@@ -18,6 +16,7 @@
   padding-left 10px
   margin-left 5px
   font-size 16px
+  margin-top: 0px;
   color $color-text-default
   margin-bottom 5px
 
