--- a/src/Modules/CreateQuestion/CreateQuestion.styl
+++ b/src/Modules/CreateQuestion/CreateQuestion.styl
@@ -2,12 +2,13 @@
 
 .create-question-container
   width 350px
-  height 250px
-  border: 1px solid black
+  height 700px
+  border-top 1px solid $color-primary-bg
+  border-bottom 1px solid $color-primary-bg
 
 .create-question-container > span
   display block
   text-align center
-  font: normal 16px/18px Georgia, sans-serif;
-  padding: 5px 0;
-  color: $color-text-default;
+  font normal 16px/18px Georgia, sans-serif
+  padding 10px 0
+  color $color-text-default
