before writing a good questionAdder

--- a/src/Components/Button/Button.styl
+++ b/src/Components/Button/Button.styl
@@ -31,13 +31,13 @@
       &:hover
         color $color-white
         background-color $color-green
+  &.type
+    &__icon
+      padding 5px
+      margin: 5px 2px
 
 .disabled
   opacity 0.4
   color $color-primary-bg !important
   &:hover
     background-color $color-white !important
-
-  &.extra
-    &_mr-10
-      margin 10px
