--- a/src/Modules/CreateQuestion/QuestionAdder/QuestionAdder.styl
+++ b/src/Modules/CreateQuestion/QuestionAdder/QuestionAdder.styl
@@ -1,2 +1,17 @@
 .question-adder-container
   border 1px solid black
+
+// .question-adder-form
+
+.question-field
+  display flex
+  margin 5px
+
+.extra-radio-button
+  margin-top 11px
+  margin-right 15px
+
+// .extra-input,
+// .extra-input input
+
+//   width: 100px
