--- a/src/Modules/CreateTest/CreateTest.styl
+++ b/src/Modules/CreateTest/CreateTest.styl
@@ -1,5 +1,4 @@
 .create-test-container
-  display flex
-  width 350px
-  height 250px
-  border: 1px solid black
+  width 400px
+  border-top 1px solid $color-primary-bg
+  border-bottom 1px solid $color-primary-bg
