get question and test uppload

--- a/src/Components/ErrorLog/ErrorLog.styl
+++ b/src/Components/ErrorLog/ErrorLog.styl
@@ -1,3 +1,9 @@
+@import '../../Assets/variables.styl';
+
 .error-log-container
-  color #dc3545
-  display block
+  font normal 16px/20px Georgia, sans-serif
+  color $color-white
+  display flex
+  background-color $color-red
+  justify-content center
+  border-radius 0 0 10px 10px
