--- a/src/Modules/CreateQuestion/AnswerCreator/AnswerCreator.styl
+++ b/src/Modules/CreateQuestion/AnswerCreator/AnswerCreator.styl
@@ -1,10 +1,10 @@
 @import '../../../Assets/variables.styl';
 
-.question-adder-container
+.answer-adder-container
   // border 1px solid black
   margin-top 10px
 
-.question-field
+.answer-field
   position relative
   display flex
   margin 5px
