before one system action panel

--- a/src/Components/Button/Button.styl
+++ b/src/Components/Button/Button.styl
@@ -36,6 +36,13 @@
     &__small
       padding 5px
       margin: 5px 2px
+  &.type
+    &__icon
+      padding 0
+      margin 2px
+      background-color transparent
+      &:hover
+        background-color transparent
 
 .disabled
   opacity 0.4
