--- a/src/Components/Table/Table.styl
+++ b/src/Components/Table/Table.styl
@@ -5,15 +5,16 @@
   margin 10px
   border 1px solid $color-primary-bg
 
+table
+  max-height 400px
+  max-width 500px
+
 .table-container th
-  padding 6px 10px
+  padding 3px
   background-color $color-primary-bg
 
 .table-container td
-  padding 6px 10px
-
-.data-body-table td
-  text-align center
+  padding 3px
 
 .table-container tr
   &:nth-child(odd)
