--- a/src/Modules/TestsAndQuestions/TestsAndQuestions.styl
+++ b/src/Modules/TestsAndQuestions/TestsAndQuestions.styl
@@ -11,3 +11,9 @@
   display flex
   flex-direction column
   align-items center
+
+.data-body-table-title
+  white-space: nowrap;
+  max-width: 150px;
+  overflow: hidden;
+  text-overflow: ellipsis;
